--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -12,8 +12,7 @@ body,
 }
 
 body {
-  font-family:
-    -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
     "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -28,7 +27,7 @@ a {
 }
 
 a:hover {
-  color: #F43F5E;
+  color: #8b1d1d;
 }
 
 h1,
