--- a/src/assets/styles/variables.css
+++ b/src/assets/styles/variables.css
@@ -1,7 +1,7 @@
 :root {
   /* Colors */
-  --primary-color: #F43F5E;
-  --secondary-color: #EC4899;
+  --primary-color: #8b1d1d;
+  --secondary-color: #c92121;
   --text-color: #333;
   --bg-color: #f5f5f5;
   --border-color: #e0e0e0;
