--- a/src/components/common/cards/FeatureCard/styles.less
+++ b/src/components/common/cards/FeatureCard/styles.less
@@ -1,4 +1,6 @@
-.heritage-card {
+@import (reference) "../../../../styles/antd-custom.less";
+
+.feature-card {
     border-radius: 16px;
     overflow: hidden;
     background: #fff;
