--- a/src/pages/Home/styles.less
+++ b/src/pages/Home/styles.less
@@ -601,12 +601,11 @@
     }
 
     // Drum decoration background
-    // Drum decoration background
     .bg-drum-bottom {
       position: absolute;
       bottom: -160px;
       left: 50%;
-      margin-left: -500px; // Center (half of 1000px) instead of transform to allow animation
+      margin-left: -500px; 
       width: 1000px;
       opacity: 0.3;
       z-index: 0;
