--- a/src/pages/Artifact/ArtifactBrowsePage/styles.less
+++ b/src/pages/Artifact/ArtifactBrowsePage/styles.less
@@ -14,6 +14,8 @@
     width: 100%;
   }
 
+ 
+
   /* Hero Section */
   .hero-section {
     min-height: 60vh;
@@ -88,7 +90,7 @@
       font-size: 36px;
       margin-bottom: 40px;
       text-align: center;
-      color: #333;
+      color: var(--primary-color) !important;
     }
 
     .featured-container {
@@ -176,7 +178,7 @@
         font-size: 36px;
         text-align: center;
         margin-bottom: 60px;
-        color: #333;
+        color: var(--primary-color) !important;
       }
     }
 
