--- a/src/pages/Heritage/HeritageBrowsePage/styles.less
+++ b/src/pages/Heritage/HeritageBrowsePage/styles.less
@@ -14,6 +14,8 @@
     width: 100%;
   }
 
+
+
   /* Hero Section */
   .hero-section {
     min-height: 60vh;
@@ -78,6 +80,7 @@
     margin-right: auto;
   }
 
+
   /* Discovered Section (Featured) */
   .discovered-section {
     padding: 60px 20px;
@@ -88,7 +91,7 @@
       font-size: 36px;
       margin-bottom: 40px;
       text-align: center;
-      color: #333;
+      color: var(--primary-color) !important;
     }
 
     .featured-container {
@@ -176,7 +179,7 @@
         font-size: 36px;
         text-align: center;
         margin-bottom: 60px;
-        color: #333;
+        color: var(--primary-color) !important;
       }
     }
 
