--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -1,40 +1,52 @@
 /* Global Styles */
-@import 'antd/dist/reset.css';
+@import "antd/dist/reset.css";
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 html,
 body,
 #root {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 body {
-    font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
-        "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    background-color: #f5f5f5;
-    color: #262626;
+  font-family:
+    "Inter",
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    "Roboto",
+    "Oxygen",
+    "Ubuntu",
+    "Cantarell",
+    "Fira Sans",
+    "Droid Sans",
+    "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #f5f5f5;
+  color: #262626;
 }
 
 code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+  font-family:
+    source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
 a {
-    text-decoration: none;
-    color: inherit;
-    transition: color 0.3s ease;
+  text-decoration: none;
+  color: inherit;
+  transition: color 0.3s ease;
 
-    &:hover {
-        color: #F43F5E;
-    }
+  &:hover {
+    color: #f43f5e;
+  }
 }
 
 h1,
@@ -43,11 +55,11 @@ h3,
 h4,
 h5,
 h6 {
-    color: #262626;
-    margin-bottom: 0.5em;
+  color: #262626;
+  margin-bottom: 0.5em;
 }
 
 p {
-    line-height: 1.6;
-    color: #595959;
+  line-height: 1.6;
+  color: #595959;
 }
